<resources>
    <string name="app_name">Guess It</string>
    <string name="play">Play</string>
    <string name="get_ready_to">Get ready to</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_word_is">The word is …</string>
    <string name="highest_score">Highest Score: %s</string>
    <string name="word">\"%s\"</string>
    <string name="score_20">Score: %1$s / %2$s</string>
    <string name="out_of_total_points">%1$s / %2$s</string>
    <string name="_00_00">"%s"</string>
    <string name="correct">Correct</string>
    <string name="skip_word">Skip word</string>
    <string name="final_score">%s</string>
    <string name="total_score">Total Score</string>
    <string name="play_again">Play again</string>
    <string name="add">Add</string>
    <string name="add_new_a_word">Add new a word</string>
    <string name="menu_search">Search</string>
    <string name="add_new_word">\"%s\" added successfully!</string>
    <string name="word_deleted">\"%s\" deleted successfully!</string>
    <string name="edit_text_wrong_input">Please check the input</string>
    <string name="get_ready_to_start_...">Get ready to start …</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="minutes">minutes (1 – 60)</string>
    <string name="how_to_play">How to play</string>
    <string name="add_more_words">Add more words</string>
    <string name="words_available">1 - %s</string>
    <string name="total_number_of_words_245">Total number of words: %s</string>
    <string name="_10_words_to_start">10</string>
    <string name="words_per_game">Words per game:</string>
    <string name="sec">Sec</string>
    <string name="_10_sec_">10</string>
    <string name="timer_column">:</string>
    <string name="min">Min</string>
    <string name="hrs">Hrs</string>
    <string name="game_duration">Game duration:</string>
    <string name="add_more">Add more</string>
    <string name="save_settings">Save Settings</string>
    <string name="pause">Pause</string>
    <string name="cancel_game">cancel game</string>
    <string name="add_all">Add all</string>
    <string name="add_in_bulk">Add in bulk</string>
</resources>