<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.">

    <data>

        <variable
            name="mSettingsDialogFragment"
            type="com.dev_sammi.packagename.guessit.ui.fragments.dialogs.settings.SettingsFragmentDialog" />

        <variable
            name="mViewModel"
            type="com.dev_sammi.packagename.guessit.ui.fragments.dialogs.settings.SettingsFragmentViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/game_duration"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/et_duration_hours"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_duration_hours"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView9"
                android:layout_alignBottom="@+id/textView9"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="4dp"
                android:gravity="center_horizontal"
                android:hint="@string/hrs"
                android:inputType="number"
                android:text="@{String.valueOf(mViewModel.inputhr)}"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:text="@string/timer_column"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/et_duration_hours"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_duration_minutes"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView14"
                android:layout_alignBottom="@+id/textView14"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="4dp"
                android:gravity="center_horizontal"
                android:hint="@string/min"
                android:inputType="number"
                android:text="@{String.valueOf(mViewModel.inputMin)}"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView14"
                app:layout_constraintTop_toTopOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:text="@string/timer_column"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/et_duration_minutes"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_duration_seconds"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView15"
                android:layout_alignBottom="@+id/textView15"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="4dp"
                android:gravity="center_horizontal"
                android:hint="@string/sec"
                android:inputType="number"
                android:text="@{String.valueOf(mViewModel.inputSec)}"
                app:layout_constraintBottom_toBottomOf="@+id/textView15"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toTopOf="@+id/textView15"
                tools:text="@string/_10_sec_" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/tv_number_of_words_in_database"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView

                android:id="@+id/textView99"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/words_per_game"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/et_number_of_words_per_game"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_number_of_words_per_game"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView99"
                android:layout_alignBottom="@+id/textView99"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="4dp"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:text="@{String.valueOf(mViewModel.numOfWords)}"
                app:layout_constraintBottom_toBottomOf="@+id/textView99"
                app:layout_constraintEnd_toStartOf="@+id/tv_max_num_of_words"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView99"
                app:layout_constraintTop_toTopOf="@+id/textView99" />

            <TextView
                android:id="@+id/tv_max_num_of_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:text="@{String.format(@string/words_available, String.valueOf(mViewModel.numOfAllWordsInDatabase))}"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/et_number_of_words_per_game"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/words_available" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_number_of_words_in_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@{String.format(@string/total_number_of_words_245, String.valueOf(mViewModel.numOfAllWordsInDatabase))}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/bt_save_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            tools:text="@string/total_number_of_words_245" />


        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/bt_add_more_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:onClick="@{()-> mSettingsDialogFragment.goToAddRemoveFragment()}"
            android:text="@string/add_more"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/tv_number_of_words_in_database"
            app:layout_constraintStart_toEndOf="@+id/tv_number_of_words_in_database"
            app:layout_constraintTop_toTopOf="@+id/tv_number_of_words_in_database" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_default_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> mSettingsDialogFragment.resetSettings()}"
            android:text="Reset Settings"
            android:textAllCaps="false"
            style="?attr/materialButtonOutlinedStyle"
            app:layout_constraintBottom_toBottomOf="@+id/bt_save_settings"
            app:layout_constraintEnd_toStartOf="@+id/bt_save_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bt_save_settings" />

        <com.google.android.material.button.MaterialButton
            app:layout_constraintStart_toEndOf="@+id/bt_default_settings"
            android:id="@+id/bt_save_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> mSettingsDialogFragment.saveAllSettings()}"
            android:text="@string/save_settings"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_number_of_words_in_database" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>